<resources>
    <string name="app_name">Self Promo App</string>
    <string name="contact_name">Contact Name</string>
    <string name="my_display_name">My Display Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="include_junior">Include \'junior\'</string>
    <string name="immediate_start">Immediate Start</string>
    <string name="preview_message">Preview Message</string>
    <string name="available_from_date">Available from date</string>
    <string name="send_message">SEND MESSAGE</string>
</resources>